# website_trial

./: .gitignore  README.md
helleniflex/: HelleniFlexDashboard.jsx  README.md  pyproject.toml  requirements.txt
helleniflex/dashboard/: README.md  SETUP.md  index.html
helleniflex/data/: feature_matrix.csv  forecast_test_predictions.csv  revenue_backtest_april_2026.csv  revenue_backtest_v2_april_2026.csv  sample_dam_prices.csv  tomorrow_dam_forecast_20260430.csv  tomorrow_dam_forecast_20260501.csv
helleniflex/data/entsoe/: GUI_ENERGY_PRICES_202412312300-202512312300.csv  GUI_ENERGY_PRICES_202512312300-202612312300.csv  GUI_ENERGY_PRICES_202604282200-202604292200.csv  GUI_NET_CROSS_BORDER_PHYSICAL_FLOWS_202604282200-202604292200__1_.csv  GUI_TOTAL_GENERATION_FORECAST_202412312300-202512312300.csv  GUI_TOTAL_GENERATION_FORECAST_202512312300-202612312300.csv  GUI_TOTAL_LOAD_DAYAHEAD_202412312300-202512312300.csv  GUI_TOTAL_LOAD_DAYAHEAD_202512312300-202612312300.csv  (+5 more)
helleniflex/docs/: HelleniFlex_DAM_Forecast_Pipeline.docx  PITCH.md  ~$lleniFlex_DAM_Forecast_Pipeline.docx
helleniflex/examples/: backtest_2026_walkforward.py  entsoe_demo.py  forecaster_experiment.py  period_forecast copy.py  quickstart.py  real_data_demo.py  revenue_backtest.py  revenue_backtest_v2.py  tomorrow_forecast.py  tomorrow_forecast_day_not_included.py
helleniflex/notebooks/: demo.ipynb
helleniflex/scripts/: build_external_features.py  build_ml_diagnostics_chart.py  build_ml_v2_diagnostics_chart.py  build_multi_source_chart.py  build_sample_data.py
helleniflex/tests/: smoke_test.py
(+47 files in other folders)
