[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helleniflex"
version = "0.1.0"
description = "Universal battery optimization framework for the Greek electricity market"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "HelleniFlex Team"}]
license = {text = "MIT"}
keywords = ["battery", "energy storage", "optimization", "electricity market", "MILP", "DAM", "Greek"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "cvxpy>=1.4",
    "highspy>=1.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
live = [
    "entsoe-py>=0.6.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]
dev = ["jupyter", "pytest", "tqdm"]

[tool.setuptools.packages.find]
where = ["src"]
